# neo-budget

./: .gitignore  Cargo.toml  sample.envrc
.github/workflows/: rust.yml
data/: neobudget.json
src/: lib.rs  loader.rs  main.rs  siv.rs
src/lib/: finance.rs  loader.rs  mod.rs  stats.rs
src/lib/repository/: json.rs  mod.rs
src/views/: add_logs.rs  add_products.rs  main_menu.rs  mod.rs  save.rs  show_logs.rs
